src/snapshots/rui__snapshot_tests__snapshot_hlist_varying.snap
---
source: src/snapshot_tests.rs
assertion_line: 131
expression: "layout_snapshot(&ui, [200.0, 200.0])"
---
root_size=[120.0, 40.0]
path=[0, 568126464209439262] rect=[0.0, 0.0, 0.0, 0.0] offset=[60.0, 0.0]
path=[0, 568126464209439262, 0] rect=[0.0, 0.0, 60.0, 40.0] offset=[0.0, 0.0]
path=[0, 1742378985846435984] rect=[0.0, 0.0, 0.0, 0.0] offset=[0.0, 0.0]
path=[0, 1742378985846435984, 0] rect=[0.0, 0.0, 20.0, 40.0] offset=[0.0, 0.0]
path=[0, 16336925911988107921] rect=[0.0, 0.0, 0.0, 0.0] offset=[20.0, 0.0]
path=[0, 16336925911988107921, 0] rect=[0.0, 0.0, 40.0, 40.0] offset=[0.0, 0.0]
