src/snapshots/rui__snapshot_tests__snapshot_nested_lists.snap
---
source: src/snapshot_tests.rs
assertion_line: 161
expression: "layout_snapshot(&ui, [200.0, 200.0])"
---
root_size=[80.0, 50.0]
path=[0, 1742378985846435984] rect=[0.0, 0.0, 0.0, 0.0] offset=[0.0, 25.0]
path=[0, 1742378985846435984, 7396300056459196583] rect=[0.0, 0.0, 0.0, 0.0] offset=[0.0, 0.0]
path=[0, 1742378985846435984, 7396300056459196583, 0] rect=[0.0, 0.0, 40.0, 25.0] offset=[0.0, 0.0]
path=[0, 1742378985846435984, 17869338426324682920] rect=[0.0, 0.0, 0.0, 0.0] offset=[40.0, 0.0]
path=[0, 1742378985846435984, 17869338426324682920, 0] rect=[0.0, 0.0, 40.0, 25.0] offset=[0.0, 0.0]
path=[0, 16336925911988107921] rect=[0.0, 0.0, 0.0, 0.0] offset=[0.0, 0.0]
path=[0, 16336925911988107921, 7396300056459196583] rect=[0.0, 0.0, 0.0, 0.0] offset=[0.0, 0.0]
path=[0, 16336925911988107921, 7396300056459196583, 0] rect=[0.0, 0.0, 40.0, 25.0] offset=[0.0, 0.0]
path=[0, 16336925911988107921, 17869338426324682920] rect=[0.0, 0.0, 0.0, 0.0] offset=[40.0, 0.0]
path=[0, 16336925911988107921, 17869338426324682920, 0] rect=[0.0, 0.0, 40.0, 25.0] offset=[0.0, 0.0]
