src/snapshots/rui__snapshot_tests__snapshot_offset_rectangle.snap
---
source: src/snapshot_tests.rs
assertion_line: 75
expression: "layout_snapshot(&ui, [100.0, 100.0])"
---
root_size=[100.0, 100.0]
path=[0, 0] rect=[0.0, 0.0, 100.0, 100.0] offset=[0.0, 0.0]
