src/snapshots/rui__snapshot_tests__snapshot_padded_sized_rectangle.snap
---
source: src/snapshot_tests.rs
assertion_line: 147
expression: "layout_snapshot(&ui, [200.0, 200.0])"
---
root_size=[70.0, 50.0]
path=[0, 0, 0] rect=[0.0, 0.0, 60.0, 40.0] offset=[0.0, 0.0]
