src/snapshots/rui__snapshot_tests__snapshot_rectangle.snap
---
source: src/snapshot_tests.rs
assertion_line: 47
expression: "layout_snapshot(&ui, [100.0, 50.0])"
---
root_size=[100.0, 50.0]
path=[0] rect=[0.0, 0.0, 100.0, 50.0] offset=[0.0, 0.0]
